--- a/src/components/RequestCard.css
+++ b/src/components/RequestCard.css
@@ -104,34 +104,24 @@
 .scroll-container {
   height: 100%;
   overflow-y: auto;
-  mask-image: linear-gradient(to bottom,
-      black calc(100% - 4px),
-      transparent 100%);
-  -webkit-mask-image: linear-gradient(to bottom,
-      black calc(100% - 4px),
-      transparent 100%);
-
+  scrollbar-width: thin;
+  scrollbar-color: rgba(40, 16, 16, 0.652) transparent;
 }
 
 /* Scrollbar styles */
 .scroll-container::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
-}
-
-.scroll-container::-webkit-scrollbar {
-  width: 6px;
+  width: 4px;
 }
 
 .scroll-container::-webkit-scrollbar-track {
-  background: rgba(40, 16, 16, 0.05);
-  border-radius: 3px;
+  background: transparent;
+  border-radius: 2px;
   margin: 4px 0;
 }
 
 .scroll-container::-webkit-scrollbar-thumb {
   background-color: rgba(40, 16, 16, 0.25);
-  border-radius: 3px;
+  border-radius: 2px;
 }
 
 .anonymous,
@@ -160,6 +150,11 @@
 
 .user-info:hover {
   transform: scale(1.01);
+}
+
+.user-info:active {
+  transform: scale(0.96);
+  transition: transform 0.1s ease;
 }
 
 .user-info span {
